Fix misaligned tabs

--- a/assets/widgets/Tabs.less
+++ b/assets/widgets/Tabs.less
@@ -19,9 +19,6 @@
     margin: 0 auto;
     padding: 0 0 2px 0;
 }
-.layout-wide .tabs-tabs {
-    margin: 0 4px;
-}
 /* base tab styles */
 .tabs-tabs > a {
     --tab-shape-color: transparent;
